--- a/src/index.adoc
+++ b/src/index.adoc
@@ -11,6 +11,8 @@ v0.1.3
 :sectanchors:
 :figure-caption!:
 :source-highlighter: highlight.js
+:highlightjsdir: ./static/highlight
+:highlightjs-theme: github-light-dark
 :nofooter:
 
 == About
